footer formatting not working on server (but ok locally). tried changing the class name. Perhaps 'footer' is overtaken, changed it to MyFooter.

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ td.box {
     text-align: center;
 }
 /*Footer style: */
-.footer {
+.MyFooter {
     width: 100%;
     color: yellow; /* light blue */
     background-color: #74DF00;  /* light green */
